<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Translation necessary-->

    <!--The easy code -->

    <string name="app_name">Just Java</string>

    <string name="name">Name</string>

    <string name="order">Order</string>

    <string name="toppings">toppings</string>

    <string name="whipped_cream">Whipped Cream</string>

    <string name="chocolate">Chocolate</string>

    <string name="quantity">quantity</string>

    <string name="price_list">price list</string>

    <string name="too_many_cups">We cannot offer more than 100 cups of coffee</string>

    <string name="too_few_cups">We cannot offer less than 1 cup of coffee</string>

    <!-- The difficult code; xliff is often used to show which variables shouldn't be translated -->

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="name_summary">Name: <xliff:g id="name" example="Inez">%s</xliff:g></string>

    <!--
      Whipped cream topping for the order summary. It will be shown in the format of
      "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="cream_summary">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

    <!--
    Chocolate topping for the order summary. It will be shown in the format of
    "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="chocolate_summary">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <!--
          Quantity of coffee cups for the order summary. It will be shown in the format of
          "Quantity: 1", where 1 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="quantity_summary">Quantity of Coffees: <xliff:g id="quantity" example="1">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="price_summary">Total price: <xliff:g id="price" example="$10">%s</xliff:g></string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_summary">Thank you!</string>

    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Inez" where Inez is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_subject">Just Java order for <xliff:g id="name" example="Inez">%s</xliff:g></string>

    <!-- The actual price list -->

    <string name="list">Cup of coffee: <xliff:g id="price_cup" example="$10">%s</xliff:g>\nWhipped cream: <xliff:g id="price_cream" example="$10">%s</xliff:g>\nChocolate topping: <xliff:g id="price_choco" example="$10">%s</xliff:g></string>


</resources>
