<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:theme="@style/edit_text_theme"
        android:inputType="textCapWords|textNoSuggestions"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:text="@string/toppings"
        style="@style/headerTextStyle"
        android:layout_marginBottom="12dp"/>

    <CheckBox
        android:id="@+id/toppings_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"
        android:paddingLeft="24dp"
        android:buttonTint="@color/blue"/>

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"
        android:paddingLeft="24dp"
        android:buttonTint="@color/blue"/>

    <TextView
        android:text="@string/quantity"
        style="@style/headerTextStyle"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:textStyle="bold"
            android:textSize="16sp"
            style="@style/button_style"
            android:onClick="decrement"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:textStyle="bold"
            android:textSize="16sp"
            style="@style/button_style"
            android:onClick="increment"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

    <TextView
        style="@style/headerTextStyle"
        android:text="@string/price_list"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/order"
        android:textStyle="bold"
        android:textSize="16sp"
        style="@style/button_style"
        android:onClick="submitOrder"/>

    </LinearLayout>
</ScrollView>